--- a/wwwroot/dbc/hotfixes.html
+++ b/wwwroot/dbc/hotfixes.html
@@ -41,7 +41,7 @@
         <a class="navbar-brand" href="/">
             <div id='logo'>
                 <div id='cog'>&nbsp;</div>
-                <div id='nocog'><img src='/img/w.svg' alt='Logo W'><img src='/img/w.svg' alt='Logo W'><span>.tools <small><i>butt local</i></small></span></div>
+                <div id='nocog'><img src='/img/w.svg' alt='Logo W'><img src='/img/w.svg' alt='Logo W'><span>.tools <small><i>but local</i></small></span></div>
             </div>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
