Text file diffs

--- a/wwwroot/builds/diff.html
+++ b/wwwroot/builds/diff.html
@@ -208,15 +208,16 @@
                                         }
                                         break;
                                     case "blp":
-                                    //case "htm":
-                                    //case "html":
-                                    // case "lua":
-                                    // case "sbt":
-                                    // case "toc":
-                                    // case "txt":
-                                    // case "xml":
-                                    // case "xsd":
-                                    // case "wtf":
+                                    case "htm":
+                                    case "html":
+                                    case "lua":
+                                     case "json":
+                                     case "sbt":
+                                     case "toc":
+                                     case "txt":
+                                     case "xml":
+                                     case "xsd":
+                                     case "wtf":
                                         content = "<a style='cursor: pointer' data-toggle='modal' data-target='#previewModal' onClick='fillDiffModal(\"" + from + "\", \"" + to + "\", \"" + full.id + "\")'>Preview</a>";
                                          break;
                                      //case "ogg":
