Make a bit more space in model control

--- a/wwwroot/mv/index.html
+++ b/wwwroot/mv/index.html
@@ -148,9 +148,9 @@
                     </li>
                 </ul>
                 <div class="tab-content">
-                    <p>Changing the skin/displayID will reset these values.</p>
+                    
                     <div class="tab-pane fade show active" id="textures" role="tabpanel" aria-labelledby="textures-tab">
-                        <p>Changing values in this form will let you assign FileDataIDs of your choosing to a certain texture slot in the model.</p>
+                        <p>Changing the skin/displayID will reset these values. Changing values in this form will let you assign FileDataIDs of your choosing to a certain texture slot.</p>
                         <form id='textureForm'>
                             <input type='text' id='tex0' name='textures[0]'> <label for='tex0'>Texture #0</label><br>
                             <input type='text' id='tex1' name='textures[1]'> <label for='tex1'>Texture #1</label><br>
