--- a/wwwroot/dbc/scenescript.html
+++ b/wwwroot/dbc/scenescript.html
@@ -73,6 +73,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/dbc/hotfixes.html"><i class="fa fa-fire-extinguisher" aria-hidden="true"></i> Hotfixes</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/files/keyinfo.html"><i class="fa fa-key" aria-hidden="true"></i> TACT Keys</a>
+                </li>
             </ul>
         </div>
     </nav>
