Hook up M2/Map/WMO namers

--- a/wwwroot/files/naming.html
+++ b/wwwroot/files/naming.html
@@ -60,14 +60,14 @@
                         <tr><td>GameObject DisplayInfo</td><td>Doodad sound naming based on GameObjectDisplayInfo.db2.</td></tr>
                         <tr><td>Interface files</td><td>Names interface files from ManifestInterfaceData.db2.</td></tr>
                         <tr><td>Item textures</td><td>Item textures referenced from ItemDisplayInfo* DB2s.</td></tr>
-                        <tr><td><b style="color:red">(NYI)</b> M2 models</td><td>Generates automatic (largely placeholder) names for M2 models and related files.</td></tr>
-                        <tr><td><b style="color:red">(NYI)</b> Map</td><td>Map-based naming of WDT, WDL, ADT, minimaps and maptextures.</td></tr>
+                        <tr><td>M2 models</td><td>Generates automatic (largely placeholder) names for M2 models and related files. <br /><b style="color: red">Note:</b> Will take several minutes!</td></tr>
+                        <tr><td>Map</td><td>Map-based naming of WDT, WDL, ADT, minimaps and maptextures. <br /><b style="color: red">Note:</b> Will take several minutes!</td></td></tr>
                         <tr><td>Music (zones)</td><td>Zone music referenced from ZoneMusic.db2 and ZoneIntroMusicTable.db2.</td></tr>
                         <tr><td>SoundKits</td><td>Name sound files based on various sources.</td></tr>
                         <tr><td>Spell textures</td><td>Very specific spell textures (chain effects and blendsets).</td></tr>
                         <tr><td>Terrain Cube Maps</td><td>Cube maps used for reflections of terrain.</td></tr>
                         <tr><td>Voice dialog (NPC)</td><td>Requires a data recording addon. Currently supported: WoWDB Profiler, Wowhead Looter.</td></tr>
-                        <tr><td><b style="color:red">(NYI)</b> WMO models</td><td>Generates automatic (largely placeholder) names for WMO models.</td></tr>
+                        <tr><td>WMO models</td><td>Generates automatic (largely placeholder) names for WMO models. <br /><b style="color: red">Note:</b> Will take several minutes!</td></td></tr>
                         <tr><td>WWF files</td><td>Weather particulate files used to show various environmental particle effects.</td></tr>
                     </tbody>
                 </table>
@@ -93,11 +93,14 @@
                         <option value="GDI" selected>GameObject DisplayInfo</option>
                         <option value="Interface" selected>Interface files</option>
                         <option value="ItemTex" selected>Item textures</option>
+                        <option value="M2" selected>M2 models</option>
+                        <option value="Map" selected>Map</option>
                         <option value="Music" selected>Zone music</option>
                         <option value="SoundKits" selected>SoundKits</option>
                         <option value="SpellTex" selected>Spell textures</option>
                         <option value="TerrainCubeMaps" selected>Terrain Cube Maps</option>
                         <option value="VO" selected>NPC dialog (requires data profiler addon)</option>
+                        <option value="WMO" selected>WMO models</option>
                         <option value="WWF" selected>WWF files</option>
                     </select>
                     <br>
