--- a/wwwroot/header.html
+++ b/wwwroot/header.html
@@ -33,10 +33,10 @@
         </li>
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-table" aria-hidden="true"></i> Other
+                <i class="fa fa-cogs" aria-hidden="true"></i> Other
             </a>
             <div class="dropdown-menu" aria-labelledby="navDropdown">
-                <a class="dropdown-item" href="/files/naming.html"><i class="fa fa-file-text" aria-hidden="true"></i> Naming</a>
+                <a class="dropdown-item" href="/files/naming.html"><i class="fa fa-file-text" aria-hidden="true"></i> File naming</a>
                 <a class="dropdown-item" href="/files/keyinfo.html"><i class="fa fa-key" aria-hidden="true"></i> TACT Keys</a>
                 <a class="dropdown-item" href="/dbc/scenescript.html"><i class="fa fa-forward" aria-hidden="true"></i> Scenescripts</a>
             </div>
