Re-enable WMOs in modelviewer file list

--- a/wwwroot/mv/index.html
+++ b/wwwroot/mv/index.html
@@ -115,37 +115,7 @@
                     
                     <div class="tab-pane fade show active" id="textures" role="tabpanel" aria-labelledby="textures-tab">
                         <p>Changing the skin/displayID will reset these values. Changing values in this form will let you assign FileDataIDs of your choosing to a certain texture slot.</p>
-                        <form id='textureForm'>
-                        <!--
-                            <input type='text' id='tex0' name='textures[0]'> <label for='tex0'>Texture #0</label><br>
-                            <input type='text' id='tex1' name='textures[1]'> <label for='tex1'>Texture #1</label><br>
-                            <input type='text' id='tex2' name='textures[2]'> <label for='tex2'>Texture #2 (Object #1)</label><br>
-                            <input type='text' id='tex3' name='textures[3]'> <label for='tex3'>Texture #3</label><br>
-                            <input type='text' id='tex4' name='textures[4]'> <label for='tex4'>Texture #4</label><br>
-                            <input type='text' id='tex5' name='textures[5]'> <label for='tex5'>Texture #5</label><br>
-                            <input type='text' id='tex6' name='textures[6]'> <label for='tex6'>Texture #6</label><br>
-                            <input type='text' id='tex7' name='textures[7]'> <label for='tex7'>Texture #7</label><br>
-                            <input type='text' id='tex8' name='textures[8]'> <label for='tex8'>Texture #8</label><br>
-                            <input type='text' id='tex9' name='textures[9]'> <label for='tex9'>Texture #9</label><br>
-                            <input type='text' id='tex10' name='textures[10]'> <label for='tex10'>Texture #10</label><br>
-                            <input type='text' id='tex11' name='textures[11]'> <label for='tex11'>Texture #11 (Monster #1)</label><br>
-                            <input type='text' id='tex12' name='textures[12]'> <label for='tex12'>Texture #12 (Monster #2)</label><br>
-                            <input type='text' id='tex13' name='textures[13]'> <label for='tex13'>Texture #13 (Monster #3)</label><br>
-                            <input type='text' id='tex14' name='textures[14]'> <label for='tex14'>Texture #14</label><br>
-                            <input type='text' id='tex15' name='textures[15]'> <label for='tex15'>Texture #15</label><br>
-                            <input type='text' id='tex16' name='textures[16]'> <label for='tex16'>Texture #16</label><br>
-                            <input type='text' id='tex17' name='textures[17]'> <label for='tex17'>Texture #17</label><br>
-                            <input type='text' id='tex18' name='textures[18]'> <label for='tex18'>Texture #18</label><br>
-                            <input type='text' id='tex19' name='textures[19]'> <label for='tex19'>Texture #19</label><br>
-                            <input type='text' id='tex20' name='textures[20]'> <label for='tex20'>Texture #20</label><br>
-                            <input type='text' id='tex21' name='textures[21]'> <label for='tex21'>Texture #21</label><br>
-                            <input type='text' id='tex22' name='textures[22]'> <label for='tex22'>Texture #22</label><br>
-                            <input type='text' id='tex23' name='textures[23]'> <label for='tex23'>Texture #23</label><br>
-                            <input type='text' id='tex24' name='textures[24]'> <label for='tex24'>Texture #24</label><br>
-                            <input type='text' id='tex25' name='textures[25]'> <label for='tex25'>Texture #25</label><br>
-                            <input type='text' id='tex26' name='textures[26]'> <label for='tex26'>Texture #26</label><br>
-                            -->
-                        </form>
+                        <form id='textureForm'></form>
                         <button type="button" class="btn btn-primary" onclick="updateTextures();" data-dismiss="modal">Save</button>
                     </div>
                     <div class="tab-pane fade" id="geosets" role="tabpanel" aria-labelledby="geosets-tab">
