--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -493,7 +493,9 @@
                                 var filename = "";
                             }
 
-                            if (full[5] == "EncryptedUnknownKey" && full[4] != "db2") {
+                            if (full[3] == "false") {
+                                test += "N/A";
+                            } else if (full[5] == "EncryptedUnknownKey" && full[4] != "db2") {
                                 test += "N/A";
                             } else {
                                 test += "<a class='fileTableDL' href='/casc/fdid?fileDataID=" + full[0] + "&filename=" + encodeURIComponent(filename) + "'>Download</a>";
@@ -544,14 +546,15 @@
                                 var test = "<a href='/dbc/?dbc=" + db2name + "' target='_BLANK'><i class='fa fa-table'></i></a>";
                             } else {
                                 //if (full[3].length && full[3][0].enc != 1) {
+
                                 if ($("#files_preview").is(":visible")) {
-                                    if (previewTypes.includes(full[4])) {
+                                    if (previewTypes.includes(full[4]) && full[3] != "false") {
                                         var test = "<a style='padding-top: 0px; padding-bottom: 0px; cursor: pointer' onClick='fillPreviewModal(\"\"," + full[0] + "\,\"" + full[4] + "\")'><i class='fa fa-eye'></i></a></td>";
                                     } else {
                                         var test = "<i class='fa fa-ban' style='opacity: 0.3'></i></td>";
                                     }
                                 } else {
-                                    if (previewTypes.includes(full[4])) {
+                                    if (previewTypes.includes(full[4]) && full[3] != "false") {
                                         var test = "<a style='padding-top: 0px; padding-bottom: 0px; cursor: pointer' data-toggle='modal' data-target='#previewModal' onClick='fillPreviewModal(\"\"," + full[0] + "\,\"" + full[4] + "\")'><i class='fa fa-eye'></i></a></td>";
                                     } else {
                                         var test = "<i class='fa fa-ban' style='opacity: 0.3'></i></td>";
