--- a/wwwroot/files/index.html
+++ b/wwwroot/files/index.html
@@ -334,7 +334,7 @@
 
             var build = searchHash.substr(searchHash.indexOf('build=')).split('&')[0].split('=')[1];
 
-            var previewTypes = ["ogg", "mp3", "blp", "wmo", "m2", "xml", "lua", "txt", "srt"];
+            var previewTypes = ["ogg", "mp3", "blp", "wmo", "m2", "lua", "txt", "srt", "toc"];
 
             var table = $('#files').DataTable({
                 "processing": true,
